# SecureSmartContractBenchmark

./: README.md
analysis/: analyze_92332_results.py  generate_visualizations.py
dataset/: generate_random_dataset.py
gscrof/DataValidationandStatistics/: ConfidenceIntervalAnalysis.PY.txt  DataLoading&Validation.PY  DescriptiveStatistics.PY  Effect Size Analysis.PY.txt  Hypothesis Testing.py  MainExecutionPipeline.PY  NormalityTesting.PY  ValidationReportGeneration.PY  statistics.py
gscrof/Scripts/: benchmark.js  deploy.js  exportMetrics.js  replayDataset.js  run_experiments.js  validateDataset.js
gscrof/Security Attack Contracts/: AuthorizationValidation.SOL  OracleValidation.SOL  PerformanceValidation.SOL  ReentrancyValidation.SOl  ReplayValidation.SOL
gscrof/Smart Contracts/: AccessManager.sol  BaselineContract.sol  OptimizationLibrary.Sol  OracleManager.sol  ProposedFramework.sol  RuntimeMonitor.Sol  SecurityLibrary.Sol
gscrof/Test/: benchmark.test.js  integration.test.js  oracle.test.js  (+3 more)
gscrof/foundation/: 1 Readme.md.txt  10. CONTRIBUTING.md.txt  2 Licence.txt  3. CITATION.cff.txt  4. package.json.txt  5. hardhat.config.js.txt  6. .gitignore.txt  7. requirements.txt.txt  8. .env.example.txt  9. CHANGELOG.md.txt  pyproject.toml
results/: EFFECTIVENESS_TABULAR_RESULTS.md  README_92332_EXPERIMENT.md  RESULTS_SUMMARY.md  VISUALIZATION_GUIDE.md  analysis_report_92332.json  attack_results_92332.csv  experiment_summary_92332.json  gas_results_92332.csv  latency_results_92332.csv  scalability_results_92332.csv  security_scores_92332.csv  visualization_data_92332.json
scripts/: EXPERIMENT_EXECUTION_GUIDE.md  run_experiment_92332.js
(+4 files in other folders)
