[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscrof"
version = "0.1.0"
description = "Green Smart Contract Resource Optimization Benchmarking Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Ravi Khatri" }
]

keywords = [
    "blockchain",
    "green-computing",
    "smart-contract",
    "resource-optimization",
    "benchmarking",
    "sustainability"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5"
]

[project.scripts]
gscrof = "gscrof.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gscrof*"]